Add in missing closing element so the button can seen

--- a/bisectcloud/site/templates/home.html
+++ b/bisectcloud/site/templates/home.html
@@ -25,6 +25,7 @@
             {% for tree in treeinfo %}
                 <option value='{{tree.name}}'>{{tree.name}}</option>
             {% endfor %}
+            </select>
             <button id='submitbutton'>Submit</button>
         </form>
     </div>
